Add project references and create BookRepository class

--- a/src/Application/BookLibraryAPI.Application/BookLibraryAPI.Application.csproj
+++ b/src/Application/BookLibraryAPI.Application/BookLibraryAPI.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Core\BookLibraryAPI.Core.Domain\BookLibraryAPI.Core.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
