--- a/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
+++ b/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Application\BookLibraryAPI.Application\BookLibraryAPI.Application.csproj" />
+    </ItemGroup>
+
 </Project>
