--- a/src/Application/BookLibraryAPI.Application/BookLibraryAPI.Application.csproj
+++ b/src/Application/BookLibraryAPI.Application/BookLibraryAPI.Application.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.0.0" />
       <PackageReference Include="MediatR" Version="13.0.0" />
     </ItemGroup>
 
