--- a/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
+++ b/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
@@ -11,7 +11,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
     </ItemGroup>
 
 </Project>
