Add connection string for Library database in development settings

--- a/src/Presentation/BookLibraryAPI.Presentation/appsettings.Development.json
+++ b/src/Presentation/BookLibraryAPI.Presentation/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "LibraryDbConnection": "Host=localhost;Port=5432;Database=BookLibrary;Username=postgres;Password=postgres"
   }
 }
