--- a/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
+++ b/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
@@ -12,6 +12,7 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.10" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.0" />
