Add reference to Core Domain project in BookLibraryAPI.UnitTests

--- a/tests/BookLibraryAPI.UnitTests/BookLibraryAPI.UnitTests.csproj
+++ b/tests/BookLibraryAPI.UnitTests/BookLibraryAPI.UnitTests.csproj
@@ -19,4 +19,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Core\BookLibraryAPI.Core.Domain\BookLibraryAPI.Core.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
