--- a/src/Presentation/BookLibraryAPI.Presentation/BookLibraryAPI.Presentation.csproj
+++ b/src/Presentation/BookLibraryAPI.Presentation/BookLibraryAPI.Presentation.csproj
@@ -9,7 +9,7 @@
 
     <ItemGroup>
         <PackageReference Include="FluentValidation" Version="12.0.0" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.18"/>
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.18" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -18,7 +18,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
@@ -28,6 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\..\BookLibrary.ServiceDefaults\BookLibrary.ServiceDefaults.csproj" />
       <ProjectReference Include="..\..\Infrastructure\BookLibraryAPI.Infrastructure\BookLibraryAPI.Infrastructure.csproj" />
     </ItemGroup>
 
