--- a/BookLibrary.AppHost/BookLibrary.AppHost.csproj
+++ b/BookLibrary.AppHost/BookLibrary.AppHost.csproj
@@ -12,6 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Aspire.Hosting.AppHost" Version="9.3.1" />
+    <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="9.4.1" />
+    <PackageReference Include="Aspire.Hosting.Redis" Version="9.4.1" />
+    <PackageReference Include="CommunityToolkit.Aspire.Hosting.MailPit" Version="9.7.0" />
   </ItemGroup>
 
   <ItemGroup>
