Enhance application architecture with service integrations
Updated AppHost to configure PostgreSQL, Redis, and MailPit services using a builder pattern. Modified project files to include necessary package references and updated launch settings for local development. Refactored EmailNotificationAdapter to use environment variables for SMTP settings, improving security. Added health check and OpenTelemetry configurations in Extensions.cs. Introduced new configuration files for build and launch support. Overall, these changes improve observability, maintainability, and configuration management.

--- a/src/AppHost/BookLibrary.AppHost.csproj
+++ b/src/AppHost/BookLibrary.AppHost.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Presentation\BookLibraryAPI.Presentation\BookLibraryAPI.Presentation.csproj" />
+    <ProjectReference Include="..\Presentation\BookLibraryAPI.Presentation\BookLibraryAPI.Presentation.csproj" />
   </ItemGroup>
 
 </Project>
