--- a/src/Presentation/BookLibraryAPI.Presentation/BookLibraryAPI.Presentation.csproj
+++ b/src/Presentation/BookLibraryAPI.Presentation/BookLibraryAPI.Presentation.csproj
@@ -8,6 +8,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Content Include="Properties\launchSettings.json" />
+    </ItemGroup>
+
+    <ItemGroup>
         <PackageReference Include="FluentValidation" Version="12.0.0" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.18" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
@@ -22,8 +26,10 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\..\BookLibrary.ServiceDefaults\BookLibrary.ServiceDefaults.csproj" />
+      <ProjectReference Include="..\..\Application\BookLibraryAPI.Application\BookLibraryAPI.Application.csproj" />
       <ProjectReference Include="..\..\Infrastructure\BookLibraryAPI.Infrastructure\BookLibraryAPI.Infrastructure.csproj" />
+      <ProjectReference Include="..\..\ServiceDefaults\BookLibrary.ServiceDefaults.csproj" />
     </ItemGroup>
+
 
 </Project>
