--- a/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
+++ b/src/Infrastructure/BookLibraryAPI.Infrastructure/BookLibraryAPI.Infrastructure.csproj
@@ -12,14 +12,14 @@
 
     <ItemGroup>
       <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
-      <PackageReference Include="CommunityToolkit.Aspire.Hosting.MailPit" Version="9.7.0" />
       <PackageReference Include="MailKit" Version="4.13.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.10" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.18" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.2" />
       <PackageReference Include="MimeKit" Version="4.13.0" />
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.11" />
+      <PackageReference Include="StackExchange.Redis" Version="2.9.11" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.13.0" />
-	  <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.4.1" />
-	  <PackageReference Include="Aspire.StackExchange.Redis.DistributedCaching" Version="9.4.1" />
 		
     </ItemGroup>
 
